bonus/confs/gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  type: NodePort
  selector:
    app: gitlab
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30800
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30443
  - name: ssh
    port: 22
    targetPort: 22
    nodePort: 32222
