bonus/confs/manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: will42-ingress
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
  - host: will42.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              number: 8888
  - host: gitlab.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 8929
